fix overflowed img

--- a/frontend/src/sass/pages/_cart-item.scss
+++ b/frontend/src/sass/pages/_cart-item.scss
@@ -13,7 +13,6 @@
 	place-items: center;
 	padding: 0.75em 1em;
 	gap: 1em;
-
 	&__img {
 		grid-area: img;
 		$size: 4em;
@@ -23,6 +22,8 @@
 		transition: all 1s ease;
 
 		box-shadow: 2px 8px 15px 1px rgba($color: colors.$primary, $alpha: 0.5);
+
+		overflow: hidden;
 	}
 	&__name {
 		grid-area: name;
