--- a/frontend/src/sass/sass.css
+++ b/frontend/src/sass/sass.css
@@ -1864,6 +1864,7 @@ body {
   border-radius: 1em;
   transition: all 1s ease;
   box-shadow: 2px 8px 15px 1px rgba(0, 72, 46, 0.5);
+  overflow: hidden;
 }
 .cart-item__name {
   grid-area: name;
